--- a/SomethingNeedDoing/TODO.txt
+++ b/SomethingNeedDoing/TODO.txt
@@ -16,3 +16,8 @@ ui:
 - have the language option be in the editor too
 - way to bulk change macro settings (move to folder, change language, etc)
 - show status of currently open macro
+
+bugs:
+- not all metadata is being written/read
+- temp macros are added to the stack before the first finishes
+- /target "name" doesn't work?
