fix function level trigger registration
corrected the match that fetched that body text of a function, which before was getting the whole macro, which would then register another trigger and so on

--- a/SomethingNeedDoing/TODO.txt
+++ b/SomethingNeedDoing/TODO.txt
@@ -18,6 +18,7 @@ ui:
 - way to bulk change macro settings (move to folder, change language, etc)
 - show status of currently open macro
 - make propagation work in the status window
+- new macro add via url directly
 
 triggers:
 - on enter fate
@@ -29,3 +30,4 @@ bugs:
 
 modules:
 - eorzea timestamp stuff
+- autoretainer api
